# Roam

./: .gitignore  .swiftformat  .swiftlint.yml  LICENSE-APACHE  LICENSE-MIT  README.md  Secrets.xcconfig
AppIcons/: Contents.json  script.zsh
BetterRemote/: AppLink.swift  AppLinksView.swift  AudioPlayer.swift  BetterRemote.entitlements  BetterRemoteApp.swift  Device.swift  DeviceConnection.sdp  DeviceControllerActor.swift  Info.plist  Mute.swift  RemoteView.swift  Select.swift  SettingsView.swift  appLinks.json
BetterRemote.xcodeproj/: project.pbxproj
BetterRemoteTests/: BetterRemoteTests.swift
BetterRemoteUITests/: BetterRemoteUITests.swift  BetterRemoteUITestsLaunchTests.swift
BetterRemoteWidgets/: BetterRemoteWidgets.entitlements  BetterRemoteWidgetsBundle.swift  MediumRemoteWidget.swift  SmallRemoteWidget.swift  WidgetHelpers.swift  WidgetIntents.swift
MacRokuRemote/: AppLink.swift  AppLinksView.swift  ContentView.swift  Device.swift  Item.swift  MacRokuRemoteApp.swift  RokuRemoteView.swift  ScannerActor.swift  SettingsView.swift  appLinks.json
MacRokuRemote.xcodeproj/: project.pbxproj
MacRokuRemoteTests/: MacRokuRemoteTests.swift
MacRokuRemoteUITests/: MacRokuRemoteUITests.swift  MacRokuRemoteUITestsLaunchTests.swift
RemoteIntents/: Info.plist  IntentHandler.swift
RemoteIntentsUI/: IntentViewController.swift
Roam/: Info.plist  LatencyListener.swift  PrivacyInfo.xcprivacy  Roam.entitlements  RoamApp.swift  RoamAppDelegate.swift  (+3 more)
Roam.xcodeproj/: project.pbxproj
backend-gateway/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
docs/: CNAME  (+11 more)
(+257 files in other folders)
