[package]
name = "roam-backend-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "^0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
dotenvy = "^0.15"
reqwest = { version = "^0.11", default-features = false, features = [
    "rustls-tls",
] }
